--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
         // ปุ่มเปิดโฆษณา
         openAdBtn.addEventListener("click", () => {
             // เปิดลิงก์โฆษณา *ทุกครั้ง*
-            window.open("https://your-ad-link-here.com", "_blank");
+            window.open("https://www.effectivegatecpm.com/upi2cccq?key=c0d5a38e346630625f6d41c6ae58f71d", "_blank");
 
             clickCount++;
 
