--- a/index.html
+++ b/index.html
@@ -707,8 +707,8 @@
     <!-- POPUP OVERLAY -->
     <div id="popupOverlay" class="popup-overlay">
         <div class="popup-container">
-            <h2 class="popup-title">ปลดล็อคสคริป</h2>
-            <p class="popup-description">กดเข้าลิงก์ให้ครบ 3 ครั้งเพื่อรับสคริป</p>
+            <h2 class="popup-title">🔒 ปลดล็อคสคริป</h2>
+            <p class="popup-description">! กดดูโฆษณาแล้วรอ 5 วินาทีแล้วค่อยกดออก 3 ครั้งเพื่อรับสคริป 🗝️</p>
 
             <div class="progress-container">
                 <div class="progress-label">
@@ -721,7 +721,7 @@
             </div>
 
             <button id="openAdBtn" class="popup-button">
-                เปิดโฆษณา
+                ดูโฆษณา
             </button>
         </div>
     </div>
