--- a/index.html
+++ b/index.html
@@ -837,16 +837,16 @@
                             <span class="info-value">15 พฤศจิกายน 2025</span>
                         </div>
                         <div class="info-item">
-                            <span class="info-label">🎮 รองรับเกม</span>
+                            <span class="info-label">🎮 รองรับแมพ</span>
                             <span class="info-value">99 Night in the Forest</span>
-                        </div>
-                        <div class="info-item">
-                            <span class="info-label">⚙️ เวอร์ชัน</span>
-                            <span class="info-value">v2.1 Stable</span>
                         </div>
                         <div class="info-item">
                             <span class="info-label">✅ สถานะ</span>
                             <span class="info-value" style="color: #10b981;">ทำงานได้ปกติ</span>
+                        </div>
+                        <div class="info-item">
+                            <span class="info-label">⚠️ ไม่รองรับตัวรัน</span>
+                            <span class="info-value" style="color: #10b981;">Xeno, Sorala</span>
                         </div>
                     </div>
                 </div>
