--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
                         </div>
                         <div class="info-item">
                             <span class="info-label">⚠️ ไม่รองรับตัวรัน</span>
-                            <span class="info-value" style="color: #10b981;">Xeno, Sorala</span>
+                            <span class="info-value" style="color: #b9102f;">Xeno, Sorala</span>
                         </div>
                     </div>
                 </div>
