--- a/index.html
+++ b/index.html
@@ -784,8 +784,8 @@
     <!-- POPUP OVERLAY -->
     <div id="popupOverlay" class="popup-overlay">
         <div class="popup-container">
-            <h2 class="popup-title">ปลดล็อคสคริป</h2>
-            <p class="popup-description">กดเข้าลิงก์ให้ครบ 3 ครั้งเพื่อรับสคริป</p>
+            <h2 class="popup-title">🔓 สิ่งที่ต้องทำ</h2>
+            <p class="popup-description">กดเข้าลิงก์แล้วรอ 5 วิแล้วกดย้อนกลับ 3 ครั้งคั๊บบ 🗝️</p>
 
             <div class="progress-container">
                 <div class="progress-label">
@@ -798,7 +798,7 @@
             </div>
 
             <button id="openAdBtn" class="popup-button">
-                เปิดโฆษณา
+                ดูโฆษณา
             </button>
         </div>
     </div>
